[workspace]
members = [
    "libafl",
    "fuzzers/libafl_derive",
    "fuzzers/libafl_cc",
    "fuzzers/libafl_targets",
    "fuzzers/libafl_frida",
    "fuzzers/libafl_qemu",
    "fuzzers/libafl_tinyinst",
    "fuzzers/libafl_sugar",
    "fuzzers/libafl_nyx",
    "fuzzers/libafl_concolic/symcc_runtime",
    "fuzzers/libafl_concolic/symcc_libafl",
    "fuzzers/libafl_concolic/test/dump_constraints",
    "fuzzers/libafl_concolic/test/runtime_test",
    "utils/deexit",
    "utils/gramatron/construct_automata",
    "utils/libafl_benches",
    "utils/build_and_test_fuzzers",
]
default-members = [
    "libafl",
    "fuzzers/libafl_derive",
    "fuzzers/libafl_cc",
    "fuzzers/libafl_targets",
]
exclude = [
    "fuzzers",
    "bindings",
    "scripts",
    "fuzzers/libafl_qemu/libafl_qemu_build",
    "fuzzers/libafl_qemu/libafl_qemu_sys"
]

[workspace.package]
version = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

