[package]
name = "forkserver_simple"
version = "0.9.0"
authors = ["tokatoka <tokazerkje@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
libafl = { path = "../../libafl/", features = ["default"] }
libfuzzer_libpng = { path = "../libfuzzer_libpng", features = ["default"] }
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
tokio = { version = "1.34.0",  features = ["full"] }
rmp-serde = "1.1.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib
flate2 = "1.0.28"
serde_bytes = "0.11.14"
num_cpus = "1.16.0"

libafl_targets = { path = "../libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }
# TODO Include it only when building cc
libafl_cc = { path = "../libafl_cc/" }
mimalloc = { version = "*", default-features = false }

[lib]
name = "libfuzzer_libpng"
path = "../libfuzzer_libpng/src/lib.rs"